--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,8 @@ jobs:
     - name: Install deps
       run: |
         npm install -g mermaid.cli
-    - name: Install correct bundler
-      run: gem install bundler:2.6.9
+    - name: Install compatible Bundler
+      run: gem install bundler -v 2.4.22
     - name: Setup deploy options
       id: setup
       run: |
