--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,9 +20,9 @@ jobs:
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.0.2'
-          bundler-cache: false  # Disable cache since we install bundler manually
-
+          ruby-version: '3.1'
+          bundler-cache: false
+          
       - name: Install compatible Bundler
         run: gem install bundler -v 2.4.22
 
